Update TODO. Version bump.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75804 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/TODO
+++ b/TODO
@@ -1,18 +1,17 @@
-o Move vignette to vignettes/
-
-o Fix issue with sgedgesByGene(SplicingGraphs:::emptySplicingGraphs()).
-
-o Add man page for rsgedgesByGene-methods.R
-
-o Implement rsgedgesByTranscript().
-
 o Replace the RNA-seq data used in the vignette by data that actually
   contains junction reads. The BAM files in TBX20BamSubset don't contain
   any!
 
+o Move vignette to vignettes/
+
+o Implement rsgedgesByTranscript().
+
 o Complete vignette (get rid of all TODO from it).
 
 o Complete man pages (get rid of all TODO from them).
+
+o Fix issue with calls to plotting functions requiring 1 more key-stroke than
+  necessary before they actually start to plot something.
 
 o Add other counting modes to countReads(), controlled via the 'by'
   argument. For example:
